# tmn

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  variables.env
.github/workflows/: docker-image.yml  rust.yml
src/: discord.rs  main.rs  tm_response.rs
