[package]
name = "ticketmaster_notifier"
description = "An easy way to get notified about new resale tickets on Ticketmaster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { version="0.6.2", default-features=false }
# Allows to develop more easily when not in a docker container
dotenvy = "0.15.7"
openssl = { version="0.10.48", features=["vendored"] }
reqwest = { version="0.11.7", features=["json"] }
rusqlite = { version="0.29.0", features=["bundled"] }
serde = { version="1.0.156", features=["derive"] }
serde_json = "1.0.94"
tokio = { version="1.26.0", features=["full"] }
